--- a/spec.html
+++ b/spec.html
@@ -155,7 +155,19 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
             1. <ins>Let _p_ be _opt_.[[&lt;_prop_&gt;]].</ins>
             1. <ins>If _p_ is not *undefined*, then</ins>
               1. <ins>Throw a *TypeError* exception.</ins>
-          1. <ins>Let _pattern_ be DateTimeStylePattern(_dateStyle_, _timeStyle_, _dataLocaleData_, _hc_).</ins>
+          1. <ins>Let _format_ be DateTimeStyleFormat(_dateStyle_, _timeStyle_, _dataLocaleData_).</ins>
+          1. <ins>For each row in <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do</ins>
+            1. <ins>Let _prop_ be the name given in the Property column of the row.</ins>
+            1. <ins>Let _p_ be _format_.[[&lt;_prop_&gt;]].</ins>
+            1. <ins>If _p_ not *undefined*, then</ins>
+              1. <ins>Set _dateTimeFormat_'s internal slot whose name is the Internal Slot column of the row to _p_.</ins>
+          1. <ins>If _dateTimeformat_.[[HourCycle]] is `"h11"` or `"h12"`, then</ins>
+              1. <ins>Let _pattern_ be _format_.[[pattern12]].</ins>
+            1. <ins>Else,</ins>
+              1. <ins>Let _pattern_ be _format_.[[pattern]].</ins>
+          1. <ins>Else,</ins>
+            1. <ins>Set _dateTimeFormat_.[[HourCycle]] to *undefined*.</ins>
+            1. <ins>Let _pattern_ be _format_.[[pattern]].</ins>
         1. <ins>Else,</ins>
           1. Let _formats_ be _dataLocaleData_.[[formats]].
           1. If _matcher_ is `"basic"`, then
@@ -235,23 +247,27 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
       </emu-alg>
     </emu-clause>
 
-    <emu-clause id="sec-date-time-style-pattern" aoid="DateTimeStylePattern">
-      <h1><ins>DateTimeStylePattern ( _dateStyle_, _timeStyle_, _dataLocaleData_, _hourCycle_ )</ins></h1>
-      <p>The DateTimeStylePattern abstract operation accepts arguments _dateStyle_ and _timeStyle_, which are each either *undefined*, `"full"`, `"long"`, `"medium"`, or `"short"`, at least one of which is not *undefined*, _dataLocaleData_, which is a record from %DateTimeFormat%.[[LocaleData]][_locale_] for some locale _locale_, and _hourCycle_, which is either `"h11"`, `"h12"`, `"h23"`, or `"h24"`. It returns the appropriate pattern for date time formatting based on the parameters.</p>
+    <emu-clause id="sec-date-time-style-format" aoid="DateTimeStyleFormat">
+      <h1><ins>DateTimeStyleFormat ( _dateStyle_, _timeStyle_, _dataLocaleData_ )</ins></h1>
+      <p>The DateTimeStyleFormat abstract operation accepts arguments _dateStyle_ and _timeStyle_, which are each either *undefined*, `"full"`, `"long"`, `"medium"`, or `"short"`, at least one of which is not *undefined*, and _dataLocaleData_, which is a record from %DateTimeFormat%.[[LocaleData]][_locale_] for some locale _locale_. It returns the appropriate format record for date time formatting based on the parameters.</p>
       <emu-alg>
         1. If _timeStyle_ is not *undefined*, then
           1. Assert: _timeStyle_ is one of `"full"`, `"long"`, `"medium"`, or `"short"`.
-          1. Let _timeFormats_ be _dataLocaleData_.[[TimeFormat]].[[&lt;_timeStyle_&gt;]].
-          1. If _hourCycle_ is `"h11"` or `"h12"`, then
-            1. Let _timeFormat_ be _timeFormats_.[[pattern12]].
-          1. Else,
-            1. Let _timeFormat_ be _timeFormats_.[[pattern]].
+          1. Let _timeFormat_ be _dataLocaleData_.[[TimeFormat]].[[&lt;_timeStyle_&gt;]].
         1. If _dateStyle_ is not *undefined*, then
           1. Assert: _dateStyle_ is one of `"full"`, `"long"`, `"medium"`, or `"short"`.
           1. Let _dateFormat_ be _dataLocaleData_.[[DateFormat]].[[&lt;_dateStyle_&gt;]].
         1. If _dateStyle_ is not *undefined* and _timeStyle_ is not *undefined*, then
+          1. Let _format_ be a new Record.
+          1. Add to _format_ all fields from _dateFormat_ except [[pattern]].
+          1. Add to _format_ all fields from _timeFormat_ except [[pattern]] and [[pattern12]], if present.
           1. Let _connector_ be _dataLocaleData_.[[DateTimeFormat]].[[&lt;_dateStyle_&gt;]].
-          1. Return the string _connector_ with the substring `"{0}"` replaced with _timeFormat_ and the substring `"{1}"` replaced with _dateFormat_.
+          1. Let _pattern_ be the string _connector_ with the substring `"{0}"` replaced with _timeFormat_.[[pattern]] and the substring `"{1}"` replaced with _dateFormat_.[[pattern]].
+          1. Set _format_.[[pattern]] to _pattern_.
+          1. If _timeFormat_ has a [[pattern12]] field, then
+            1. Let _pattern12_ be the string _connector_ with the substring `"{0}"` replaced with _timeFormat_.[[pattern12]] and the substring `"{1}"` replaced with _dateFormat_.[[pattern]].
+            1. Set _format_.[[pattern12]] to _pattern12_.
+          1. Return _format_.
         1. If _timeStyle_ is not *undefined*, then
           1. Return _timeFormat_.
         1. Assert: _dateStyle_ is not *undefined*.
